set up spme styles

--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,28 @@ body{
 }
 h1{
   margin: 0;
+  font-family: 'Sacramento', cursive;
 }
 h4{
   margin: 0;
+  font-family: 'Uchen', serif;
 }
 .top-container{
-  margin:0;
+  margin:auto 0;
   background-color: #B5EAEA;
+  text-align: center;
+  position: relative;
+  padding-top: 100px;
 }
-.middle-container{
-
+.top-cloud{
+  position: absolute;
+  right: 300px;
+  top: 50px;
 }
-.bottom-container{
+.bottom-cloud{
+  position: absolute;
+  bottom: 300px;
+  left: 300px;
+}
 
 }
