--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,33 @@ body{
 h1{
   margin: 0;
   font-size: 100px;
+  color: #66BFBF;
   font-family: 'Sacramento', cursive;
 }
 h2{
   font-family: 'Sacramento', cursive;
   font-size: 40px;
+  color: #66BFBF;
 }
 h3{
   font-size: 25px;
+  color: #66BFBF;
+
 }
 h4{
   margin: 0;
   font-family: 'Uchen', serif;
   font-size: 25px;
+  color: #66BFBF;
+
+
 }
 h5{
   font-size: 25px;
   font-family: 'Uchen', serif;
   margin: 0;
   font-weight: lighter;
+
 }
 .top-container{
   margin:auto 0;
